@@ -3430,6 +3430,7 @@ GEN     deg1pol_shallow(GEN x1, GEN x0,long v);
 GEN     deg2pol_shallow(GEN x2, GEN x1, GEN x0,long v);
 long    degree(GEN x);
 GEN     denom(GEN x);
+GEN     denom_i(GEN x);
 GEN     deriv(GEN x, long v);
 GEN     derivser(GEN x);
 GEN     diffop(GEN x, GEN v, GEN dv);
@@ -3524,6 +3525,7 @@ GEN     mkvecsmalln(long n, ...);
 GEN     modRr_safe(GEN x, GEN y);
 GEN     mulreal(GEN x, GEN y);
 GEN     numer(GEN x);
+GEN     numer_i(GEN x);
 long    padicprec(GEN x, GEN p);
 long    padicprec_relative(GEN x);
 GEN     polcoef(GEN x, long n, long v);
